config/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: ops
  labels:
    run: jenkins
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: agent
    protocol: TCP
    port: 50000
    targetPort: 50000
  selector:
    app: jenkins
